<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.watersy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_profile"
        android:name="com.example.watersy.ViewProfile"
        android:label="@string/profile"
        tools:layout="@layout/activity_view_profile"/>

    <activity
        android:id="@+id/nav_store"
        android:name="com.example.watersy.ViewProfile"
        android:label="@string/store"
        tools:layout="@layout/activity_view_profile"/>

    <activity
        android:id="@+id/nav_refilter"
        android:name="com.example.watersy.RefilterActivity"
        android:label="@string/refilter"
        tools:layout="@layout/activity_refilter"/>

    <activity
        android:id="@+id/nav_promo"
        android:name="com.example.watersy.ViewProfile"
        android:label="@string/promo"
        tools:layout="@layout/activity_view_profile"/>

    <activity
        android:id="@+id/nav_toc"
        android:name="com.example.watersy.RefilterActivity"
        android:label="@string/terms_and_conditions"
        tools:layout="@layout/activity_refilter"/>

    <activity
        android:id="@+id/nav_privacy"
        android:name="com.example.watersy.ViewProfile"
        android:label="@string/privacy"
        tools:layout="@layout/activity_view_profile"/>

</navigation>