<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:src="@drawable/login_bg"
    android:orientation="vertical"
    android:scaleType = "centerCrop"
    android:isScrollContainer="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="143dp">

        <LinearLayout
            android:id="@+id/reg_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/reg_welcome"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reg_welcome"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                />
            <Spinner
                android:id="@+id/title_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="15dp"
                android:background="@drawable/edittext_border"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/reg_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sample_firstName"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/sample_firstName"
                android:inputType="textPersonName"
                android:padding="16dp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/reg_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sample_lastname"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/sample_lastname"
                android:inputType="textPersonName"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                />
            <Spinner
                android:id="@+id/province_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="15dp"
                android:background="@drawable/edittext_border"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/reg_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:autofillHints="@string/sample_phone"
                android:hint="@string/sample_phone"
                android:inputType="phone"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:autofillHints="@string/sample_email_address"
                android:hint="@string/sample_email_address"
                android:inputType="textEmailAddress"
                android:padding="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/reg_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp" />

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:backgroundTint="@color/primary_blue"
                android:text="@string/create_account" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginVertical="10dp"
                />

            <Button
                android:id="@+id/login_btn_on_reg"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:foreground="@drawable/edittext_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/login"
                android:textColor="@color/primary_blue" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>