<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="143dp">

        <LinearLayout
            android:id="@+id/update_profile_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/update_profile_welcome"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/update_profile_title"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/title" />

            <Spinner
                android:id="@+id/up_title_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/update_profile_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sample_firstName"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/sample_firstName"
                android:inputType="textPersonName"
                android:padding="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/update_profile_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sample_lastname"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/sample_lastname"
                android:inputType="textPersonName"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/province" />

            <Spinner
                android:id="@+id/up_province_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:text="@string/phone_num" />

            <EditText
                android:id="@+id/update_profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sample_phone"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/sample_phone"
                android:inputType="phone"
                android:padding="16dp" />


            <Button
                android:id="@+id/update_profile_btn"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:backgroundTint="@color/primary_blue"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/update_profile" />

            <Button
                android:id="@+id/update_profile_cancel_btn"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/edittext_border"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/cancel"
                android:textColor="@color/primary_blue" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>