<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:src="@drawable/login_bg"
    android:orientation="vertical"
    android:scaleType = "centerCrop"
    android:isScrollContainer="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_bg"
        android:scaleType = "centerCrop"
        android:contentDescription="@string/login_bg_image_desc"
        android:isScrollContainer="false"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="143dp">

        <LinearLayout
            android:id="@+id/login_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/login_welcome"
                android:layout_width="246dp"
                android:layout_height="86dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_welcome_text"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:autofillHints="@string/email_address"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/password"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:backgroundTint="@color/primary_blue"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginVertical="10dp"
                />

            <Button
                android:id="@+id/register_btn_on_login"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:foreground="@drawable/edittext_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/create_account"
                android:textColor="@color/primary_blue" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>